# foundry-audit-readiness

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: audit-readiness.yml  ci.yml
audit_readiness/: __init__.py  __main__.py  config.py  natspec.py  parser.py  reporter.py  scanner.py  utils.py
reports/: dreit_all_tools_report.html  dreit_all_tools_report.md  dreit_full_report.md  dreit_natspec_check.md  dreit_ready_report.html  dreit_ready_report.md  dreit_report.html  dreit_report.md
scripts/: install.sh  readiness  readiness-full
tests/: test_natspec.py  test_parser.py
tests/fixtures/sample_project/src/: SimpleToken.sol
tests/fixtures/sample_project/test/: SimpleToken.t.sol
