[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "foundry-audit-readiness"
version = "2.0.0"
description = "Automated audit readiness checks for Foundry Solidity projects"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Karim M."}]
keywords = ["solidity", "foundry", "audit", "security", "smart-contracts"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.0",
    "jinja2>=3.0",
    "markdown>=3.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.scripts]
audit-readiness = "audit_readiness.__main__:main"

[project.urls]
Homepage = "https://github.com/mailtkarim-bot/foundry-audit-readiness"
Repository = "https://github.com/mailtkarim-bot/foundry-audit-readiness"

[tool.setuptools.packages.find]
where = ["."]
include = ["audit_readiness*"]
